2010-09-30  Vadim Kurland  <vadim@vk.crocodile.org>

	* utils.cpp (validateName): fixed #1751 "Don't allow interface
	names to be blank". The GUI should not allow the name of any
	object to be blank.

2010-09-29  Vadim Kurland  <vadim@vk.crocodile.org>

	* ProjectPanel.cpp (ProjectPanel::inspect): fixed #1718 "Inspect
	generated files" dialog says "Multiple firewalls" even when there
	is only one

	* InterfaceEditorWidget.cpp (InterfaceEditorWidget::InterfaceEditorWidget):
	added "placeholder" text to the interface name and label input
	fields. This text is displayed in greyed-out small font inside
	the imput field but is cleared as soon as user starts their input.
	The text gives user a prompt as of what is expected in each input
	field. The "placeholder" text support is available only in Qt 4.7
	and later so the code is conditional on the version of Qt.

	* WorkflowIcons.cpp (WorkflowIcons::openTutorial): fixed #1733
	"Add button for video tutorial link". Shortcut button "Watch
	Getting Started Tutorial" opens page with video tutorials in
	the standard browser.

	* InterfaceEditorWidget.cpp (InterfaceEditorWidget::isValid):
	fixed #1746 "Force user to change interface name in New Firewall
	wizard". When user creates interfaces for the new firewall or host
	using manual method and clicks on the "+" button to add a tab for
	the new interface in the wizard page, the interface tab is created
	with blank name. Wizard later checks the name when user clicks
	Finish to create new firewall or host object and does not let them
	do this while interface name is still blank. Error dialog reminds
	that the name of the interface must match the name of the
	interface on the machine.

	* ProjectPanel.cpp (ProjectPanel::updateFirewallName): fixed #1745
	"Remove path data from text above rules window that shows firewall
	name".

2010-09-28  Vadim Kurland  <vadim@vk.crocodile.org>

	* ObjectManipulator_create_new.cpp (reminderAboutStandardLib):