@@ -216,6 +216,9 @@ void newFirewallDialog::changed()
                        !readPlatform(m_dialog->platform).isEmpty()
         );
         setHostOS(m_dialog->hostOS, readPlatform(m_dialog->platform), "");
+        QString host_os = readHostOS(m_dialog->hostOS);
+        this->m_dialog->interfaceEditor1->setHostOS(host_os);
+        this->m_dialog->interfaceEditor2->setHostOS(host_os);
     }
 
     if (p==1)
@@ -440,7 +443,7 @@ void newFirewallDialog::showPage(const int page)
         getInterfacesBusy = true;
 
         InetAddr addr;
-        QString name=m_dialog->obj_name->text().toLatin1().constData();
+        QString name = m_dialog->obj_name->text().toLatin1().constData();
         try
         {
             QApplication::setOverrideCursor( QCursor( Qt::WaitCursor) );
@@ -469,14 +472,14 @@ void newFirewallDialog::showPage(const int page)
                 "security_levels") )
         {
 
-        this->m_dialog->interfaceEditor1->setExplanation(
-            tr("Dynamic interface gets its IP address by means "
-               "of DHCP or PPP protocol and does not require an "
-               "address here. Regular interface has statically "
-               "configured IP address which should be entered on "
-               "this page. Interface can have several IPv4 and "
-               "IPv6 addresses.")
-        );
+            this->m_dialog->interfaceEditor1->setExplanation(
+                tr("Dynamic interface gets its IP address by means "
+                   "of DHCP or PPP protocol and does not require an "
+                   "address here. Regular interface has statically "
+                   "configured IP address which should be entered on "
+                   "this page. Interface can have several IPv4 and "
+                   "IPv6 addresses.")
+            );
 
 /* if chosen fw platform does not support security levels,
  * this is the last page
